--- a/transcriptome/templates/transcriptome/base.jinja2
+++ b/transcriptome/templates/transcriptome/base.jinja2
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 <link rel="stylesheet" href="{{ STATIC_URL ~ 'transcriptome/css/style.css' }}">
 <link href="//fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" type="text/css">
-{# <script type="text/javascript" src="{{ STATIC_URL ~ 'js/main.js' }}"></script> #}
+<script type="text/javascript" src="{{ STATIC_URL ~ 'transcriptome/js/main.js' }}"></script>
 
 <title>
   {% block title %}
