--- a/transcriptome/templates/transcriptome/search.jinja2
+++ b/transcriptome/templates/transcriptome/search.jinja2
@@ -23,26 +23,29 @@
       {% elif pager.current_page == 1 %}
         First
         Previous
-        <a href="/bdorseq/search/?page={{ pager.next_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Next</a>
-        <a href="/bdorseq/search/?page={{ pager.last_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Last</a>
+        <a href="/bdorseq/search/?page={{ pager.next_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Next</a>
+        <a href="/bdorseq/search/?page={{ pager.last_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Last</a>
       {% elif pager.current_page == pager.last_page %}
-        <a href="/bdorseq/search/?page={{ pager.first_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">First</a>
-        <a href="/bdorseq/search/?page={{ pager.previous_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Previous</a>
+        <a href="/bdorseq/search/?page={{ pager.first_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">First</a>
+        <a href="/bdorseq/search/?page={{ pager.previous_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Previous</a>
         Next
         Last
       {% else %}
-        <a href="/bdorseq/search/?page={{ pager.first_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">First</a>
-        <a href="/bdorseq/search/?page={{ pager.previous_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Previous</a>
-        <a href="/bdorseq/search/?page={{ pager.next_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Next</a>
-        <a href="/bdorseq/search/?page={{ pager.last_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Last</a>
+        <a href="/bdorseq/search/?page={{ pager.first_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">First</a>
+        <a href="/bdorseq/search/?page={{ pager.previous_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Previous</a>
+        <a href="/bdorseq/search/?page={{ pager.next_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Next</a>
+        <a href="/bdorseq/search/?page={{ pager.last_page }}&line={{ line|join('&line=') }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Last</a>
       {% endif %}
 
       {% if transcript_subset.exists() %}
         {% block export_form %}
           <form name="export_form", action="/bdorseq/export/" method="post">
             <input type="hidden" name="seqname", value="{{ getparam.seqname }}" />
-            <input type="hidden" name="line", value="{{ getparam.line }}" />
+            {% for i in line %}
+              <input type="hidden" name="line", value="{{ i }}" />
+            {% endfor %}
             <input type="hidden" name="seq", value="{{ getparam.seq }}" />
+            <input type="hidden" name="evalue", value="{{ getparam.evalue }}" />
             <input type="hidden" name="refacc", value="{{ getparam.refacc }}" />
             <input type="hidden" name="refdes", value="{{ getparam.refdes }}" />
             <input type="submit", name="export_fasta", value="Download FASTA" />
