Add changelog page and update help page; change the pattern of sequence field in transcript search form

--- a/transcriptome/static/transcriptome/css/general.css
+++ b/transcriptome/static/transcriptome/css/general.css
@@ -50,6 +50,20 @@ a {
   width: 130px;
 }
 
+.search.seq #title {
+  float: left;
+  padding-right: 3px;
+}
+
+.search.seq #seq {
+  float: left;
+  padding-right: 3px;
+}
+
+.search.seq #evalue {
+  vertical-align: top;
+}
+
 div.clear {
     clear: both;
 }
