--- a/transcriptome/templates/transcriptome/base.jinja2
+++ b/transcriptome/templates/transcriptome/base.jinja2
@@ -27,6 +27,7 @@
       <a href="/bdorseq/seqvar/search/">SeqVar</a> |
       <a href="{{ FTP_URL }}" target="_blank">Releases (FTP)</a> |
       <a href="/bdorseq/help" target="_blank">Help</a> |
+      <a href="/bdorseq/changelog" target="_blank">Changelog</a> |
       <a href="/bdorseq/logout/">Logout</a>
     </p>
   {% endblock menu %}
