--- a/transcriptome/templates/transcriptome/help.jinja2
+++ b/transcriptome/templates/transcriptome/help.jinja2
@@ -1,13 +1,13 @@
 <h1>Help</h1>
 <a name="seqname"><h2>Isotig Nomenclature</h2></a>
 Example:<br>
-<p>BDSSOLD1.68.1</p>
+<p>BDSSHS1.1.68.10</p>
 BD: Bactrocera dorsalis<br>
-SS: Susceptible<br>
-OLD: Class or insecticide name<br>
-1: isogroup id<br>
-68: total number of isotigs in the isogroup<br>
-1: isotig id<br>
+SS: Susceptible (RS: Resistant; RC: Recovered)<br>
+HS1: Class or insecticide name (the first three letters)<br>
+1: Isogroup ID<br>
+68: Total number of isotigs in the isogroup<br>
+10: Isotig ID<br>
 <br>
 
 <a name="download_options"><h2>Download Options</h2></a>
