--- a/transcriptome/templates/transcriptome/changelog.jinja2
+++ b/transcriptome/templates/transcriptome/changelog.jinja2
@@ -5,7 +5,9 @@
   <li>Add checkboxes for multiple lines selection.</li>
   <li>Add 'select all' checkbox.</li>
   <li>Remove archive search form from home page and menu.</li>
-  <li>Rename lines: from 'OLD' to 'HS1' and from 'NEW' to 'HS2'.</li>
-  <li>Update help page.</li>
+  <li>Rename lines: from 'OLD' to 'HS1' and from 'NEW' to 'HS2'. Add extra one dot between class and isogroup ID.</li>
+  <li>Implement blastn for sequence search.</li>
   <li>Change the header of gene expression table: from 'feature_id' to 'transcript_name'.</li>
+  <li>Update help page.</li>
+  <li>Add changelog page.</li>
 </ul>
